vlib/v/checker/tests/assign_expr_unresolved_variables_err_c.out
vlib/v/checker/tests/assign_expr_unresolved_variables_err_c.v:2:10: error: undefined variables `a`
    1 | fn main() {
    2 |     a, b := a + 1, b * 3
      |             ^
    3 |     println('$a, $b')
    4 | }
